--- a/looks.css
+++ b/looks.css
@@ -105,6 +105,7 @@ li.c{
   font-size: 20px; 
 }
 div button {
+  overflow: hidden;
   font-family: palatino;
   font-size: 25px;
   padding: 20px 16px;
