--- a/looks.css
+++ b/looks.css
@@ -1,161 +1,129 @@
-h1 {
-  margin-top:2%;
-  left:0;
-  position: relative;
-  display:block;
-  text-transform: uppercase;
-  margin-bottom: 2%;
-  font-family: palatino;
-  font-size: 35px;
-}
-#experience_year, #experience_title{
-  width: 50%;
-  max-width: 50%;
-  font-size: 20px;
-}
-div.experience_title{
-  padding-left: 2%;
-  max-width: 50%;
-  float:left;
-  font-size: 20px;
-}
-ul.sei_li{
-  position: absolute;
-  float: right;
-}
-li.sei_li{
-  padding-left: 2%;
-  list-style-type: none;
-}
-
-div.experience_year{
-  padding-right: 5%;
-  max-width: 50%;
-  float: right;
-  font-size: 20px;
-}
-#ul.education_, #ul.education, #ul.sc, #ul.c{
-    position: absolute;
-    margin-bottom: 30%
-    margin-top:100%;
-    width: 50%;
-}
-li.education_{
-  padding-right: 5%;
-  float:right;
-  font-family: palatino;
-  list-style-type: none;
-  font-style: bold;
-  font-size: 20px;
-}
-
-li.education {
-  padding-left: 2%;
-  float:left;
-  white-space: pre;
-  width: 50%;
-  font-family: palatino;
-  list-style-type: none;
-  font-style: bold;
-  font-size: 20px;
-}
-p.demo{
-  display: block;
-  margin-bottom: 30%
-  margin-top:100%;
-  font-size: 2000px;
-}
-p.objective{
-  font-size: 25px;
-  position: absolute;
-  max-width: 95%;
-  margin-left: 20%;
-  margin-right: 20%;
-  text-align: center;
-}
-div.sc_heading{
-   width: 50%;
-  list-style-type: none;
-  text-align: center;
-  font-family: palatino;
-  margin-left: 30%;
-  margin-right: 50%;
-  font-style: bold;
-  font-size: 25px;
-}
-
-li.sc{
-  width:50%;
-  list-style-type: none;
-  text-align: center;
-  font-family: palatino;
-  margin-left: 30%;
-  margin-right: 50%;
-  font-style: bold;
-  font-size: 20px;
-}
-li.c{
-  width: 50%;
-   list-style-type: none;
-  text-align: center;
-  font-family: palatino;
-  margin-left: 30%;
-  margin-right: 50%;
-  font-style: bold;
-  font-size: 20px; 
-}
-div button {
-  overflow: hidden;
-  font-family: palatino;
-  font-size: 25px;
-  color: black;
-  text-align: center;
-  background-color:  #F0FFFF;
-  min-height: 50px;
-  border-style: none;
-  width: 20%
-}
-div button:hover {
+body{
   background-color: #f1f1f1;
-}
-
-ul.links {
   font-family: palatino;
-  font-style: bold;
+  font-size: 16px;
+}
+li a {
   font-size: 25px;
   color: black;
-  list-style-type: none;
-  overflow: hidden;
-  background-color:  #F0FFFF;
-}
-ul.mainLinks {
-  font-family: palatino;
+  display: block;
+  border-style: none;
   font-style: bold;
-  list-style-type: none;
-  top:0;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  font-size: 25px;
-  background-color: #F0FFFF;
-}
-
-li.mainLinks {
-  font-family: palatino;
-  font-style: bold;
-  font-size: 25px;
-  top:0;
-  float: center;
-}
-
-li.list {
-  padding: 8px 16px;
+  text-decoration: none;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  text-align: center;
+  width: 33.33%;
   float: left;
   background-color:  #F0FFFF;
-  list-style-type: none;
 }
 
+li a:hover{
+  background-color: #f1f1f1;
+  padding-top: 1%;
+  padding-bottom: 1%;
+}
+ul.navigation{
+  margin: 0;
+  padding:0;
+  text-decoration: none;
+  list-style: none;
+  overflow: hidden;
+}
+div.inline_div {
+  display: inline;
+}
+p.interests {
+  padding-top: 1%;
+  text-align: center;
+  font-size: 20px;
+}
+div.skills{
+  font-size: 15px;
+}
+li {
+  text-decoration: none;
+}
+div.skills_1{
+  width:50%;
+  display: inline-block;
+  vertical-align: top;
+  float: left;
+}
+div.skills_2{
+  width: 50%;
+  display: inline-block;
+  vertical-align: top;
+  float: right;
+}
+h1 {
+  left:0;
+  margin-top:2%;
+  padding: 0;
+  position: relative;
+  display:block;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 35px;
+}
+h2 {
+  padding-top: 1%;
+  margin: 1%;
+}
+table.experience{
+  margin: 1%;
+  width: 94%;
 
+}
+td.experience{
+  font-weight: bold;
+}
+td.exp_date{
+  text-align: right;
+}
+table.education {
+  margin: 1%;
+  width: 94%;
+}
+td.education {
+  text-align: right;
+}
+td.hanging_ed {
+  margin: 100%;
+}
+
+div.link_wrapper {
+  padding-top: 0;
+  text-align: center;
+  padding-bottom: 1%;
+}
+.button{
+  border-radius: 12px;
+  background-color: #B8B8B8;
+  font-size: 15px;
+  font-family: palatino;
+}
+ul.clist {
+  text-align: center;
+  list-style-type: none;
+  margin-left: 2%;
+  padding:3px;
+  max-width: 35%;
+  height:30px;
+  overflow-y: scroll;
+}
+li.c {
+  background-color: #B8B8B8;
+}
+div.project {
+  text-align: center;
+}
+p.project_des {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  max-width: 500px;
+}
 .rectangle {
   height: 100%;
   width: 5%;
@@ -165,8 +133,4 @@ li.list {
   position: fixed;
   background-color: #C7B6DC;
   z-index: -100;
-}
-
-body {
-  background-color: #f1f1f1;
 }
