--- a/looks.css
+++ b/looks.css
@@ -38,6 +38,20 @@ p.interests {
   text-align: center;
   font-size: 20px;
 }
+h2.contact {
+  text-align: center;
+}
+div.form {
+   text-align: center;
+   margin-right: 5%;
+   margin-left: 5%;
+
+}
+input {
+  text-align: center;
+  margin-bottom: 1%;
+  width: 500px;
+}
 div.skills{
   font-size: 15px;
 }
