--- a/looks.css
+++ b/looks.css
@@ -84,6 +84,22 @@ h2 {
   padding-top: 1%;
   margin: 1%;
 }
+a.resume {
+  font-size:18px;
+  background-color: #B8B8B8; 
+  font-family: palatino;
+  text-decoration: none;
+  color: black;
+  padding: 4px;
+  border-radius: 12px;
+  border-style: solid;
+  border-width: 1px;
+
+}
+div.resume {
+  padding-top:2%;
+  text-align: center;
+}
 table.experience{
   margin: 1%;
   width: 94%;
